@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999935';
+our $VERSION='0.999999999936';
 
 
 use 5.005;
