@@ -22,6 +22,13 @@
 
 2014-11-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.999999999936 released.
+
+        * More code added for the AWS EC2 Liferay demo.
+
+
+2014-11-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.999999999935 released.
 
         * More code added for the AWS EC2 Liferay demo.
